fix: gap size between lang select and next element (#1619)

--- a/src/client/theme-default/slots/RtlSwitch/index.less
+++ b/src/client/theme-default/slots/RtlSwitch/index.less
@@ -7,7 +7,8 @@
   background-color: transparent;
   cursor: pointer;
 
-  [class*='-switch'] + & {
+  [class*='-switch'] + &,
+  [class*='-select'] + & {
     margin-inline-start: 15px;
     margin-inline-end: -15px;
     padding-inline: 15px;
