--- a/src/client/theme-default/slots/SocialIcon/index.less
+++ b/src/client/theme-default/slots/SocialIcon/index.less
@@ -4,7 +4,8 @@
   font-size: 0;
   line-height: 0;
 
-  [class*='-switch'] + & {
+  [class*='-switch'] + &,
+  [class*='-select'] + & {
     margin-inline-start: 15px;
     margin-inline-end: -15px;
     padding-inline: 15px;
